# Loop-Engineering-Template

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  environment.yml  package.json  pnpm-lock.yaml  start.sh
backend/: .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/config/: __init__.py  app.local.example.yaml  app.yaml  config.py
backend/constant/: __init__.py  enums.py  values.py
backend/controller/: health_api.py  plan_api.py  platform_api.py  task_api.py
backend/database/: __init__.py  lifecycle.py  models.py  session.py
backend/domain/: __init__.py  models.py  req.py  res.py
backend/exceptions/: __init__.py  business_exception.py  exception_handler.py
backend/mapper/: __init__.py  file_queue.py  file_run.py
backend/middlewares/: __init__.py  auth_dependency.py  auth_handler.py  request_logging.py
backend/migrations/: README.md  env.py
backend/service/: health_service.py  plan_service.py  platform_service.py  project_registry.py  queue_service.py  task_service.py
backend/tests/: conftest.py  test_config.py  test_file_queue.py  test_file_run.py  test_health_api.py  test_plan_api.py  test_platform_api.py  test_project_registry.py  test_queue_api.py  test_queue_service.py  test_standalone_config.py  test_task_api.py  test_task_service.py
backend/utils/: task_executor.py
codex_loop/: __main__.py  audit.py  codex_client.py  context.py  evaluation.py  knowledge.py  mcp_client.py  memory.py  models.py  planner.py  policy.py  queue_workflow.py  (+8 more)
(+134 files in other folders)
